pagina de autenticação

--- a/angular.json
+++ b/angular.json
@@ -104,6 +104,11 @@
               "browserTarget": "helpdesk-front:build:development"
             }
           },
+          "options":{
+            "browserTarget": "your-application-name:build",
+            "proxyConfig": "src/proxy.conf.json"
+      
+          },
           "defaultConfiguration": "development"
         },
         "extract-i18n": {
